# BDA-Project

./: .gitignore  .pdm-python  Dockerfile.consumer  Dockerfile.dashboard  README.md  dashboard.py  db.py  docker-compose.yml  health_tracker.db  llm.py  llm_2.py  main.py  meal_consumer.py  prometheus.yml  py_obj.py  pyproject.toml  requirements.txt  synthetic_nutrition.xlsx  test.py  tools.py
backend/: db.py  health_tracker.db  llm.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend /src/app/: layout.tsx
frontend /src/app/(main)/c/[id]/: page.tsx
frontend /src/app/(main)/chat/: page.tsx
frontend /src/app/(main)/diet/: page.tsx
frontend /src/components/: hero.tsx  navbar.tsx  sidebar.tsx  taskcard.tsx
frontend /src/features/chat/components/: message-bubble.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(main)/c/[id]/: page.tsx
frontend/src/app/(main)/chat/: page.tsx
frontend/src/app/(main)/diet/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/components/: google-signin-button.tsx  hero.tsx  navbar.tsx  onboarding-provider.tsx  sidebar.tsx  taskcard.tsx
frontend/src/features/chat/components/: chat-input.tsx  message-bubble.tsx
frontend/src/features/workout/components/: topcard.tsx
frontend/src/lib/: session.ts  supabase-client.ts
grafana/provisioning/dashboards/: meal_dashboard.json
